--- a/conf.d/host-checks.cfg
+++ b/conf.d/host-checks.cfg
@@ -1,4 +1,4 @@
 define command{
-        command_name    check-host-alive-tcp-port
-        command_line    /usr/lib/nagios/plugins/check_tcp -H '$HOSTADDRESS' -p $ARG1$ -w 1 -c 3
+        command_name    check-host-alive-tcp-443
+        command_line    /usr/lib/nagios/plugins/check_tcp -H '$HOSTADDRESS' -p 443 -w 1 -c 3
         }
