Abstract out hosts that are only able to be checked by tcp/443

--- a/conf.d/host-checks.cfg
+++ b/conf.d/host-checks.cfg
@@ -1,4 +1,25 @@
 define command{
         command_name    check-host-alive-tcp-443
-        command_line    /usr/lib/nagios/plugins/check_tcp -H '$HOSTADDRESS' -p 443 -w 1 -c 3
+        command_line    /usr/lib/nagios/plugins/check_tcp -H '$HOSTADDRESS$' -p 443 -w 1 -c 3
+        }
+
+define hostgroup{
+        hostgroup_name https-servers
+        alias HTTPS
+        }
+
+define service {
+        hostgroup_name                  https-servers
+        service_description             HTTPS
+        check_command                   check_https
+        use                             generic-service
+        notification_interval           0 ; set > 0 if you want to be renotified
+        }
+
+define host{
+        register 0
+        use generic-host
+        name generic-https-host
+        hostgroups https-servers
+        check_command check-host-alive-tcp-443
         }
