Get Nagios to Nag.

--- a/conf.d/templates/generic-service.cfg
+++ b/conf.d/templates/generic-service.cfg
@@ -13,12 +13,12 @@ define service{
         process_perf_data               1       ; Process performance data
         retain_status_information       1       ; Retain status information across program restarts
         retain_nonstatus_information    1       ; Retain non-status information across program restarts
-    notification_interval           0   ; Only send notifications on status change by default.
+    notification_interval           1800 ; re-notify every 30 minutes
     is_volatile                     0
     check_period                    24x7
-    normal_check_interval           5
-    retry_check_interval            1
-    max_check_attempts              4
+    normal_check_interval           3 ; check every 3 minutes normally
+    retry_check_interval            1 ; on state change recheck every 1 minute
+    max_check_attempts              3 ; 3 same results is a hard status change
     notification_period             24x7
     notification_options            w,u,c,r
     contact_groups                  admins
